assets/styles/scss/style.scss
// fonts load
@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&family=Titillium+Web:wght@700&display=swap");

// variables

$font-family-base: "Source Sans Pro", sans-serif;
$font-family-headings: "Titillium Web", sans-serif;

$font-weight-base: 400;
$font-weight-bold: 600;
$font-weight-extra-bold: 700;

$font-size-base: 14px;

$black: #000;
$white: #fff;
$mineShaft: #3a3a3a;
$grey: #484848;
$pomegranate: #f44337;
$monza: #bf0816;
$royal-blue: #2738f1;
$yellow: #fbc02d;

// general
body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
span,
a,
div {
  font-weight: $font-weight-base;
  font-family: $font-family-base;
  font-size: $font-size-base;
}

body {
  max-width: 1600px;
  margin: 0 auto;
}

// menu
.menu {
  background-color: $black;
  position: relative;

  @media (max-width: 992px) {
    .container {
      max-width: 100%;
      padding: 0;
    }
  }

  &__brand {
    margin-right: 32px;
  }

  &__link {
    background-color: $black;
    color: $white;
    font-size: 16px;
    font-weight: 700;
    margin-top: 8px;
    border-radius: 8px 8px 0 0;
    transition: background-color 0.4s ease-in-out, color 0.4s ease-in-out;

    @media (max-width: 992px) {
      border-radius: 0;
      margin-top: 0;
    }

    &:hover {
      background-color: $white;
      color: $black;
    }
  }

  &__toggler {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 32px;

    &:focus {
      outline: none;
    }

    div {
      width: 24px;
      height: 2px;
      background-color: $white;
      border-radius: 2px;
      transition: transform 0.2s ease-in-out, opacity 0.2s ease-in-out;
    }

    &[aria-expanded="true"] {
      div:nth-child(1) {
        transform: translateY(10px) rotate(45deg);
      }
      div:nth-child(2) {
        opacity: 0;
      }
      div:nth-child(3) {
        transform: translateY(-10px) rotate(-45deg);
      }
    }
  }

  &__toggler-wrapper {
    padding: 24px;
    background-color: $mineShaft;

    @media (min-width: 992px) {
      display: none;
    }
  }

  .navbar {
    padding: 0;

    @media (max-width: 992px) {
      justify-content: flex-start;
    }
  }
}

.menu .navbar .menu__link {
  padding: 20px 8px 28px 8px;

  @media (max-width: 992px) {
    padding: 28px 8px 28px 8px;
  }
}

// end menu

// products

.products {
  position: relative;

  &__background-img {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    min-height: 400px;
    object-fit: cover;
    z-index: -1;
    object-position: bottom;
  }

  &__header {
    display: flex;
    justify-content: space-between;
    max-width: 1200px;
    padding: 40px 32px 0;
    margin: 0 auto;
    align-items: center;

    @media (max-width: 992px) {
      flex-direction: column-reverse;
      gap: 24px;
    }
  }

  &__alphabetically {
    span {
      text-decoration: underline;
      font-weight: $font-weight-bold;
      font-size: 15px;
    }

    width: 180px;

    @media (max-width: 992px) {
      text-align: right;
      width: 100%;
    }

    #sort_normal {
      display: none;
    }

    &:hover {
      cursor: pointer;
    }
  }

  &__title-wrapper {
    display: flex;
    position: relative;
    align-items: center;

    @media (max-width: 992px) {
      text-align: center;
      flex-direction: row;
    }

    &::after {
      content: "";
      position: absolute;
      top: calc(100% + 8px);
      left: 50%;
      transform: translateX(-50%);
      width: 72px;
      height: 4px;
      background-color: $pomegranate;

      @media (max-width: 992px) {
        display: none;
      }
    }
  }

  &__title {
    margin-bottom: 0;
    font-family: $font-family-headings;
    font-weight: $font-weight-extra-bold;
    font-size: 34px;

    @media (max-width: 992px) {
      font-size: 18px;
    }
  }

  &__c-flag {
    width: 44px;
    height: 32px;
    margin-right: 12px;
  }

  &__change-view {
    padding-right: 64px;

    @media (max-width: 992px) {
      display: none;
    }
  }

  &__switch {
    padding-left: 0;

    .custom-control-label {
      text-decoration: underline;
      font-weight: $font-weight-bold;
      font-size: 15px;

      &:hover {
        cursor: pointer;
      }
    }

    .custom-control-label::before {
      left: calc(100% + 16px);
      top: 0;
      width: 45px;
      height: 24px;
      border-radius: 45px;
    }

    .custom-control-label::after {
      left: calc(100% + 18px);
      top: 2px;
      height: 20px;
      width: 20px;
      border-radius: 20px;
    }

    .custom-control-label::before {
      outline: none;
      box-shadow: none !important;
      border: 1px solid #adb5bd !important;
    }

    .custom-control-input:checked {
      & ~ .custom-control-label::after {
        transform: translateX(20px);
      }

      & ~ .custom-control-label::before {
        background-color: #828282;
      }
    }
  }
}

.product-cards {
  display: flex;
  justify-content: center;
  padding: 40px 32px 0;
  margin: 0 auto;
  gap: 16px;

  &--list {
    flex-direction: column;
    gap: 12px;
  }

  &__view-more {
    padding: 32px 0;
    text-align: center;
  }

  &__view-more-link {
    color: $royal-blue;
    font-weight: $font-weight-bold;
    font-size: 15px;

    @media (max-width: 992px) {
      text-decoration: underline;
    }
  }
}

.product-card {
  flex: 0 0 18%;
  max-width: 18%;
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  align-items: center;
  background-color: $white;
  box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.2), 0px 1px 16px rgba(0, 0, 0, 0.2);
  border-radius: 12px;
  padding: 28px;
  position: relative;
  transform: scale(1);
  transition: transform 0.2s ease-in-out;

  @media (max-width: 1200px) {
    flex: 0 0 30%;
    max-width: 30%;
  }

  @media (max-width: 992px) {
    flex: 0 0 45%;
    max-width: 45%;
  }

  @media (max-width: 576px) {
    flex: 0 0 100%;
    max-width: 100%;
  }

  &:hover {
    transform: scale(1.05);
  }

  &--list {
    flex-direction: row;
    max-width: 100%;
    width: 100%;
    padding: 12px 21px;
    justify-content: left;
    gap: 32px;

    @media (max-width: 992px) {
      gap: 0 32px;
      padding-right: 92px;
      padding-left: 8px;
    }

    @media (max-width: 576px) {
      gap: 12px;
      padding-right: 32px;
      justify-content: left;
    }

    .product-card__sale-offer {
      margin-bottom: 0;
    }

    .product-card__logo {
      margin-bottom: 0;
    }

    .product-card__number {
      position: relative;

      @media (max-width: 576px) {
        display: none;
      }
    }

    .product-card__review-wrapper {
      margin-right: auto;
      margin-bottom: 0;
      display: flex;

      @media (max-width: 576px) {
        margin-right: initial;
      }
    }

    .product-card__stars {
      margin-right: 24px;

      @media (max-width: 992px) {
        display: none;
      }
    }

    .product-card__line-break {
      display: initial;
      margin-right: 4px;

      @media (max-width: 992px) {
        display: block;
      }
    }

    .product-card__button {
      margin-top: initial;
    }
  }

  &__number {
    position: absolute;
    top: 2px;
    left: 12px;
    font-size: 26px;
    font-weight: 700;
  }

  &__logo {
    width: 140px;
    height: 70px;
    object-fit: contain;
    margin-bottom: 8px;

    @media (max-width: 992px) {
      width: 100px;
    }
  }

  &__review-wrapper {
    margin-bottom: 24px;
  }

  &__stars {
    display: flex;
    justify-content: center;
    padding: 6px 0;
  }

  &__star {
    width: 11px;
    height: 11px;
  }

  &__show-review {
    color: $mineShaft;
    text-decoration: underline;
  }

  &__sale-offer {
    color: $royal-blue;
    text-align: center;
    font-size: 17px;
    margin-bottom: 32px;

    span {
      font-size: 17px;
    }

    &--mobile {
      display: none;
    }

    @media (max-width: 992px) {
      &--desktop {
        display: none;
      }
      &--mobile {
        display: block;
      }
    }
  }

  &__line-break {
    display: block;
  }

  &__button {
    font-size: $font-size-base;
    padding-left: 40px;
    padding-right: 40px;
    margin-top: auto;
    position: relative;

    &--mobile {
      display: none;
      position: absolute;
      right: 0;
      height: 100%;
      padding: 0;
      width: 50px;
      border-radius: 0 8px 8px 0;
    }

    @media (max-width: 992px) {
      &--desktop {
        display: none;
      }
      &--mobile {
        display: block;
      }
    }

    &__chevron {
      width: 5.87px;
      height: 10px;
      position: absolute;
      top: 50%;
      transform: translateY(-50%);
      right: 16px;
      transition: right 0.2s ease-in-out;

      &--mobile {
        width: 7.64px;
        height: 13px;
      }
    }

    &:hover {
      .product-card__button__chevron {
        right: 8px;
      }
    }
  }
}

.btn-primary {
  background-color: $pomegranate;
  border-color: $pomegranate;
  transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out;

  &:hover {
    background-color: $monza;
    border-color: $monza;
  }
}

// end product

// image

.image-big {
  max-width: 1200px;
  padding: 40px 32px 0;
  margin: 0 auto;

  @media (max-width: 768px) {
    display: none;
  }

  &__image {
    width: 100%;
    padding: 16px;
    box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.2), 0px 1px 16px rgba(0, 0, 0, 0.2);
    border-radius: 12px;
    filter: sepia(60%);
    // filter: sepia(60%);
  }
}

